# iNat-Scraper

./: .gitignore  license  readme.md
PowerShell/: Get-AllPhotosForCsvFile.ps1
Python/: .env.example  __main__.py  client.py  configuration.py  export.py  pyproject.toml  readme.md
inat_project_extractor/: .env.example  .mypy.ini  __main__.py  client.py  configuration.py  export.py  merge.py  pyproject.toml  readme.md  requirements.txt
photo_download/: readme.md
